# vere

./: .bazelrc  BUILD.bazel  INSTALL.md  WORKSPACE.bazel
bazel/toolchain/: BUILD.bazel
docker/: BUILD.bazel
pkg/c3/: BUILD.bazel  defs.h  portable.h
pkg/ent/: BUILD.bazel  ent.c
pkg/noun/: allocate.c  allocate.h  events.c  manage.c  manage.h  trace.c  vortex.c
pkg/vere/: main.c  pier.c  serf.c
pkg/vere/io/: ames.c  behn.c  conn.c  cttp.c  http.c  term.c  unix.c
